botao mensalista e historico e inputsearch

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="container">
         <h1 style="text-align: center; color: aliceblue; font-size: 60px;">P A R K I N H O</h1>
+        <button>Histórico</button>
+        <button>Mensalitas</button>
         <div class="section-container">
             <div class="title-div">
                 <h1>Entrada</h1>
@@ -26,6 +28,7 @@
             <div class="title-div">
                 <h1>Saída</h1>
                 <p>*Esta sessão é exclusiva para registro de saída de veículos</p>
+
             </div>
             <div class="form-div">
                 <form style="display: flex;width: 100%; justify-content: space-around;" action="">
@@ -39,6 +42,7 @@
             <div class="title-div">
                 <h1>Histórico</h1>
                 <p>*Aqui você pode consultar o histórico de registros</p>
+                <input type="search">
             </div>
         </div>
     </div>
