--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="form-div">
                 <form style="display: flex;width: 100%; justify-content: space-around;" action="">
-                    <input type="text" placeholder="Placa">
+                    <input type="text" id="myInput" oninput="formatInput(this)" maxlength="8" placeholder="Placa">
                     <input type="text" placeholder="Modelo">
                     <input style="margin: 0;" type="submit" value="OK">
                 </form>
@@ -32,7 +32,7 @@
             </div>
             <div class="form-div">
                 <form style="display: flex;width: 100%; justify-content: space-around;" action="">
-                    <input type="text" placeholder="Placa">
+                    <input type="text" id="myInput" oninput="formatInput(this)" maxlength="8" placeholder="Placa">
                     <input style="margin: 0;background-color: red;" type="submit" value="OK">
                     <div class="total">R$ 40,00</div>
                 </form>
@@ -47,4 +47,5 @@
         </div>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
