--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <body>
     <div class="container">
         <h1 style="text-align: center; color: aliceblue; font-size: 60px;">P A R K I N H O</h1>
-        <button>Histórico</button>
-        <button>Mensalitas</button>
         <div class="section-container">
             <div class="title-div">
                 <h1>Entrada</h1>
@@ -38,13 +36,25 @@
                 </form>
             </div>
         </div>
-        <div class="section-container">
-            <div class="title-div">
-                <h1>Histórico</h1>
-                <p>*Aqui você pode consultar o histórico de registros</p>
-                <input type="search">
+
+        <div class="section-container2">
+            <div id="historico">
+                <div class="title-div">
+                    <h1>Histórico</h1>
+                </div>
             </div>
+
+            <div id="mensalista" style="text-align: center;">
+                <div class="title">
+                    <h1>Mensalistas</h1>
+                </div>
+            </div>
+
         </div>
+
+        
+
+
     </div>
 </body>
 <script src="script.js"></script>
